--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,3 +1,8 @@
+<form action="/authors/new" method="post">
+	<input type="text" name="name">
+	<input type="submit" value="submit">
+</form>
+
 <ul>
 	<% authors.forEach(function(author) { %>
 		<li><%= author.name %></li>
